Create project for tests

--- a/cs/TagsCloudVisualization/TagsCloudVisualization.csproj
+++ b/cs/TagsCloudVisualization/TagsCloudVisualization.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Images\ImagesTest\**" />
+    <EmbeddedResource Remove="Images\ImagesTest\**" />
+    <None Remove="Images\ImagesTest\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.12.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit" Version="4.2.2" />
@@ -17,7 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Images\ImagesTest\" />
+    <Folder Include="ImagesTest\" />
+    <Folder Include="Images\" />
   </ItemGroup>
 
 </Project>
